<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:fontFamily="sans-serif">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblName"
            app:layout_constraintTop_toBottomOf="@+id/btnUpdateContact" />

        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblAddress"
            app:layout_constraintTop_toBottomOf="@+id/txtWebsite" />

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblPhone"
            app:layout_constraintTop_toBottomOf="@+id/txtSurname" />

        <TextView
            android:id="@+id/txtSurname"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblSurname"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblEmail"
            app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

        <TextView
            android:id="@+id/txtWebsite"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblWebsite"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

        <TextView
            android:id="@+id/lblContactsDetails"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/contactDetails"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnUpdateContact"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/btnUpdatePerson"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="#0004FF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:icon="@android:drawable/ic_input_add"
            app:iconTint="#0004FF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblContactsDetails"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDeleteContact"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/deletePerson"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/lblName"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:text="@string/lblName"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblContactsDetails" />

        <TextView
            android:id="@+id/lblSurname"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/lblSurname"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblName" />

        <TextView
            android:id="@+id/lblPhone"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/lblNumber"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblSurname" />

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/lblEmail"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPhone" />

        <TextView
            android:id="@+id/lblAddress"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/lblAddress"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblWebsite" />

        <TextView
            android:id="@+id/lblWebsite"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/lblWebsite"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>