<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDDDDD"
        android:fontFamily="sans-serif">

        <ListView
            android:id="@+id/contactslist"
            android:layout_width="409dp"
            android:layout_height="450dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnDeleteAllContact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSearch"
            tools:ignore="NestedScrolling" />

        <TextView
            android:id="@+id/lblContactsList"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/contactslist"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAddContact"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/btnNewText"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="#0004FF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:icon="@android:drawable/ic_input_add"
            app:iconTint="#0004FF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblContactsList"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDeleteAllContact"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/deleteAllContacts"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtSearch"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/search"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblContactsList"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnSearch"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:icon="?android:attr/actionModeWebSearchDrawable"
            app:iconTint="#0004FF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtSearch"
            app:layout_constraintTop_toBottomOf="@+id/btnAddContact" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>